--- a/inspect_data.ipynb
+++ b/inspect_data.ipynb
@@ -8,10 +8,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merging 22 files for session Q...\n",
-      "SUCCESS: Qualifying CSV saved to data/f1_2022_all_qualifying.csv (6985 rows)\n",
-      "Merging 22 files for session R...\n",
-      "SUCCESS: Race CSV saved to data/f1_2022_all_races.csv (23577 rows)\n"
+      "Merging 21 files for session Q...\n",
+      "SUCCESS: Qualifying CSV saved to data/f1_2018_all_qualifying.csv (6054 rows)\n",
+      "Merging 21 files for session R...\n",
+      "SUCCESS: Race CSV saved to data/f1_2018_all_races.csv (22337 rows)\n"
      ]
     }
    ],
@@ -22,9 +22,9 @@
     "\n",
     "# --- CONFIGURATION ---\n",
     "# The folder containing your yearly parquet files (e.g., data/2022)\n",
-    "INPUT_FOLDER = 'data/2022'\n",
+    "INPUT_FOLDER = 'data/2018'\n",
     "OUTPUT_FOLDER = 'data'\n",
-    "YEAR = 2022\n",
+    "YEAR = 2018\n",
     "\n",
     "def consolidate_sessions(input_dir, year, session_suffix):\n",
     "    \"\"\"\n",
@@ -73,8 +73,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2026-01-03T09:55:27.038085Z",
-     "start_time": "2026-01-03T09:55:21.103899Z"
+     "end_time": "2026-01-03T15:22:50.300663Z",
+     "start_time": "2026-01-03T15:22:42.536046Z"
     }
    },
    "id": "a699d91ad05faf94"
@@ -130,13 +130,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inizio consolidamento dati gare (2018-2025)...\n",
+      "Processing 2018: Unione di 21 gare in corso...\n",
+      "SUCCESS: Creato file per il 2018 -> 22337 righe totali.\n",
+      "Processing 2019: Unione di 21 gare in corso...\n",
+      "SUCCESS: Creato file per il 2019 -> 23676 righe totali.\n",
+      "Processing 2020: Unione di 17 gare in corso...\n",
+      "SUCCESS: Creato file per il 2020 -> 18352 righe totali.\n",
+      "Processing 2021: Unione di 22 gare in corso...\n",
+      "SUCCESS: Creato file per il 2021 -> 23758 righe totali.\n",
+      "Processing 2022: Unione di 22 gare in corso...\n",
+      "SUCCESS: Creato file per il 2022 -> 23577 righe totali.\n",
+      "Processing 2023: Unione di 22 gare in corso...\n",
+      "SUCCESS: Creato file per il 2023 -> 24422 righe totali.\n",
+      "Processing 2024: Unione di 24 gare in corso...\n",
+      "SUCCESS: Creato file per il 2024 -> 26606 righe totali.\n",
+      "Processing 2025: Unione di 24 gare in corso...\n",
+      "SUCCESS: Creato file per il 2025 -> 26692 righe totali.\n",
+      "\n",
+      "Processo completato!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "# --- CONFIGURATION ---\n",
+    "BASE_DATA_DIR = 'data'\n",
+    "YEARS = list(range(2018, 2026))  # Dal 2018 al 2025 compreso\n",
+    "OUTPUT_DIR = 'data/consolidated'\n",
+    "\n",
+    "# Crea la cartella di output se non esiste\n",
+    "if not os.path.exists(OUTPUT_DIR):\n",
+    "    os.makedirs(OUTPUT_DIR)\n",
+    "\n",
+    "def consolidate_year_races(year):\n",
+    "    \"\"\"\n",
+    "    Cerca tutti i file _R.parquet nella cartella dell'anno,\n",
+    "    li unisce e salva un unico file annuale.\n",
+    "    \"\"\"\n",
+    "    year_folder = os.path.join(BASE_DATA_DIR, str(year))\n",
+    "    \n",
+    "    # Verifica se la cartella dell'anno esiste\n",
+    "    if not os.path.exists(year_folder):\n",
+    "        print(f\"--- Saltando {year}: Cartella non trovata ---\")\n",
+    "        return\n",
+    "\n",
+    "    # Cerchiamo solo i file della Gara (_R)\n",
+    "    # Usiamo sorted() per mantenere l'ordine dei Round (gp_01, gp_02...)\n",
+    "    search_pattern = os.path.join(year_folder, \"*_R.parquet\")\n",
+    "    file_list = sorted(glob.glob(search_pattern))\n",
+    "\n",
+    "    if not file_list:\n",
+    "        print(f\"--- Saltando {year}: Nessun file di gara trovato ---\")\n",
+    "        return\n",
+    "\n",
+    "    print(f\"Processing {year}: Unione di {len(file_list)} gare in corso...\")\n",
+    "\n",
+    "    df_list = []\n",
+    "    for file in file_list:\n",
+    "        try:\n",
+    "            # Carichiamo il file parquet\n",
+    "            temp_df = pd.read_parquet(file)\n",
+    "            df_list.append(temp_df)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Errore durante la lettura di {file}: {e}\")\n",
+    "\n",
+    "    if df_list:\n",
+    "        # Concateniamo tutti i DataFrame della stagione\n",
+    "        full_year_df = pd.concat(df_list, ignore_index=True)\n",
+    "        \n",
+    "        # Salvataggio in formato Parquet (consigliato per ML)\n",
+    "        output_file_parquet = os.path.join(OUTPUT_DIR, f\"f1_{year}_all_races.parquet\")\n",
+    "        full_year_df.to_parquet(output_file_parquet, engine='pyarrow', index=False)\n",
+    "        \n",
+    "        # Salvataggio opzionale in CSV per ispezione rapida\n",
+    "        # output_file_csv = os.path.join(OUTPUT_DIR, f\"f1_{year}_all_races.csv\")\n",
+    "        # full_year_df.to_csv(output_file_csv, index=False)\n",
+    "        \n",
+    "        print(f\"SUCCESS: Creato file per il {year} -> {len(full_year_df)} righe totali.\")\n",
+    "    else:\n",
+    "        print(f\"Nessun dato valido trovato per il {year}.\")\n",
+    "\n",
+    "def main():\n",
+    "    print(f\"Inizio consolidamento dati gare (2018-2025)...\")\n",
+    "    for year in YEARS:\n",
+    "        consolidate_year_races(year)\n",
+    "    print(\"\\nProcesso completato!\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2026-01-03T15:27:08.222401Z",
+     "start_time": "2026-01-03T15:27:06.175111Z"
+    }
+   },
+   "id": "df44fa77a16b751e"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "df44fa77a16b751e"
+   "id": "9e84b64b18b318c0"
   }
  ],
  "metadata": {
